[gd_scene load_steps=3 format=3 uid="uid://iu3xr4g0pu8f"]

[ext_resource type="PackedScene" uid="uid://diicrcyygya4f" path="res://game/entities/base_entity/base_entity.tscn" id="1_a5b3i"]
[ext_resource type="Script" path="res://game/entities/enemies/base_enemy/base_enemy.gd" id="2_otpiv"]

[node name="BaseEnemy" groups=["enemy"] instance=ExtResource("1_a5b3i")]
collision_layer = 40
collision_mask = 27
script = ExtResource("2_otpiv")

[node name="WaitTimer" type="Timer" parent="." index="0"]
wait_time = 2.0

[node name="AttackCooldownTimer" type="Timer" parent="." index="1"]
wait_time = 2.0
autostart = true

[node name="RayCast2D" type="RayCast2D" parent="." index="4"]
collision_mask = 17

[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
